gcc/testsuite/gm2/pim/pass/minmaxreal3.mod
MODULE minmaxreal3 ;  

FROM SYSTEM  IMPORT REAL64 ;

VAR
   min, max: REAL64 ;
BEGIN
   min := MIN (REAL64) ;
   max := MAX (REAL64)
END minmaxreal3.
