gcc/testsuite/gm2/pim/fail/tinyadr.mod
MODULE tinyadr ;

FROM SYSTEM IMPORT ADR ;

CONST
   foo = ADR (bar) ;

VAR
   bar: CARDINAL ;
BEGIN

END tinyadr.
